--- a/_config.yml
+++ b/_config.yml
@@ -1,33 +1,34 @@
 # site settings
-title: Forty
-subtitle: by HTML5 UP
-email: youremailaddress@gmail.com
-description: A responsive site template designed by HTML5 Up<br /> and released under the Creative Commons.
-baseurl: "/forty-jekyll-theme" # the subpath of your site, e.g. /blog
-url: # the base hostname & protocol for your site
-author:
-street_address: 1234 Somewhere Road
-city: Nashville
-state: TN
-zip_code: 55555
-country: United States of America
-phone: (716) 555-5555
+title: Stefano Spalletta
+subtitle: A Portfolio
+email: me at mail dot com
+description: DEVOPS? CLOUD? What do you mean "not enough automation"?!<br />
+#baseurl: "/forty-jekyll-theme/" # the subpath of your site, e.g. /blog
+baseurl:
+url: https://stespa.com # the base hostname & protocol for your site
+#author: Ste
+#street_address: 1234 Somewhere Road
+#city: Rome
+#state: Italy
+#zip_code:
+#country:
+#phone:
 
 # homepage tiles
-tiles-source: pages # accepts "posts" or "pages"
-tiles-count: 6
+tiles-source: posts # accepts "posts" or "pages"
+tiles-count: 2
 
 # social settings
 500px_url:
 facebook_url:
-github_url:
-gitlab_url: https://gitlab.com/u/andrewbanchich
-googleplus_url: https://plus.google.com/u/0/+AndrewBanchich
-instagram_url: https://instagram.com
-linkedin_url: https://www.linkedin.com/in/andrew-banchich-a4ba1195
+github_url: https://github.com/ste032
+gitlab_url:
+googleplus_url:
+instagram_url:
+linkedin_url: https://www.linkedin.com/in/stefano-spalletta-99745b138/
 pinterest_url:
 slack_url:
-twitter_url: https://twitter.com/andrewbanchich
+twitter_url:
 
 # build settings
 markdown: kramdown
